tests/NormalTests/paczka2/big_fuzzy/68364585.err
Error in line 5: L2Gy2 S509 90,8
Error in line 12: L2Gy2 S854 82,0
Error in line 17: L2Gy2 S509 12,6
Error in line 16: 6wjfkl S509 4,3
Error in line 24: 6wjfkl A247 55,4
Error in line 31: ysyEtU A247 240,6
Error in line 38: PLW96r5E S854 29,1
Error in line 41: PLW96r5E A129 74,3
Error in line 43: PLW96r5E S854 44,7
Error in line 44: PLW96r5E A129 17,9
Error in line 45: PLW96r5E S854 89,6
Error in line 52: 6wjfkl A129 411,8
Error in line 47: S509 A129 79,4
Error in line 70: L2Gy2 A247 6,2
Error in line 73: PLW96r5E S854 0,0
Error in line 72: ysyEtU A247 14,1
Error in line 61: vphe S854 45,7
Error in line 74: PLW96r5E A129 48,0
Error in line 85: L2Gy2 S854 50,2
Error in line 84: S509 A129 99,6
Error in line 94: 6wjfkl A12Õ 102,4
Error in line 99: ]s]EtU S854 83,3
Error in line 115: ysyEtU A129 -2,4
Error in line 107: ysyEtU A129 32,7
Error in line 127: 6Yq5C A247 -2,2
Error in line 121: 6Yq5C A247 44,2
Error in line 116: PLW96r5E S854 23,6
Error in line 141: S509 A247 15,6
Error in line 148: vphe A247 259,2
Error in line 139: 6wjfkl S854 60,2
Error in line 180: PLW96r5E S854 76,2
Error in line 196: vphe A247 88,6
Error in line 203: 6Yq5C A247 145,4
Error in line 209: L2Gy2 S509 257,2
Error in line 231: 6Yq5C S854 85,9
Error in line 245: ysyEtU A247 49,3
